# SerialEvaluation

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeUserPresets.json
.superpowers/sdd/: task-1-report.md  task-2-report.md
docs/superpowers/plans/: 2026-07-17-batch-tcp-port-add-plan.md  2026-07-17-per-port-stop-statistics-plan.md  2026-07-17-unmatched-response-recovery-plan.md  2026-07-18-runtime-port-log-tab-switching-plan.md  2026-07-18-sticky-response-logging-plan.md
docs/superpowers/specs/: 2026-07-17-batch-tcp-port-add-design.md  2026-07-17-unmatched-response-recovery-design.md  2026-07-17-windows-portable-package-design.md  2026-07-18-runtime-port-log-tab-switching-design.md  2026-07-18-sticky-response-logging-design.md
src/: RCa27780  fixedlengthframedecoder.cpp  fixedlengthframedecoder.h  icommunicationinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  namespace.h  protocolframedecoder.cpp  protocolframedecoder.h  resources.rc  responsehandling.cpp  responsehandling.h  responsetiming.h  serialclientworker.cpp  serialclientworker.h  statisticsmanager.cpp  statisticsmanager.h  tcpclientworker.cpp  tcpclientworker.h  tcpportparser.cpp  tcpportparser.h
tests/: fixedlengthframedecoder_test.cpp  protocolframedecoder_test.cpp  responsehandling_test.cpp  responsetiming_test.cpp  tcpportparser_test.cpp
